# barista

./: angular.json  nx.json  package-lock.json  package.json  tsconfig.json  tslint.json
apps/design-tokens-ui/src/app/: app.component.scss
apps/design-tokens-ui/src/pages/palette-detail/: palette-detail.component.scss
apps/design-tokens-ui/src/pages/palettes/: palettes.component.scss
apps/design-tokens-ui/src/pages/palettes/components/palette-tile/: palette-tile.component.scss
apps/design-tokens-ui/src/styles/: variables.scss
libs/barista-components/autocomplete/src/: autocomplete-trigger.ts
libs/barista-components/bar-indicator/src/: _bar-indicator-theme.scss
libs/barista-components/filter-field/src/: filter-field.html
libs/barista-components/schematics/src/ng-add/: ng-add.spec.ts
libs/barista-components/schematics/src/testing/: workspace.ts
libs/barista-components/style/: main.scss
libs/design-tokens-ui/input/src/lib/: input.component.scss
libs/design-tokens-ui/style/: main.scss
libs/shared/design-tokens/src/lib/aliases/: palette-source.alias.yml
libs/shared/design-tokens/src/lib/global/: palette.yml
libs/shared/design-tokens/src/lib/patterns/: button.yml
libs/shared/node/: BUILD.bazel
libs/testing/fixtures/src/: index.ts
libs/testing/fixtures/src/lib/: fixture.ts
libs/workspace/: BUILD.bazel  rollup.config.js  webpack.config.js
libs/workspace/src/schematics/dt-component-e2e/: index.spec.ts  index.ts  schema.ts
libs/workspace/src/schematics/dt-component-e2e/__snapshots__/: index.spec.ts.snap
libs/workspace/src/schematics/dt-component-e2e/files/apps/components-e2e/src/components/__name@dasherize__/: __name@dasherize__.e2e.ts
