package(default_visibility=["//visibility:public"])
load("@npm_bazel_typescript//:index.bzl", "ts_library", "ts_config")

filegroup(
    name = "compiled",
    srcs = ["node"],
    # Change to es6_sources to get the 'prodmode' JS
    output_group = "es6_sources",
    # output_group = "es5_sources",
)

ts_library(
  name = "node",
  srcs = glob(
    include = ["src/**/*.ts"],
    exclude = ["**/*.spec.ts", "src/test-setup.ts"],
  ),
  tsconfig = "tsconfig_lib",
  module_name = "@dynatrace/shared/node",
  module_root = "src",
  deps = [
    "@npm//@types/node",
    "@npm//axios",
    "@npm//rxjs",
    "@npm//typescript",
  ]
)

ts_config(
  name = "tsconfig_lib",
  src = "tsconfig.lib.json",
  deps = [
    "tsconfig.json",
    "//:tsconfig.json"
  ]
)
